add pipeline generation

--- a/.github/workflows/gophermart.yml
+++ b/.github/workflows/gophermart.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Prepare binaries
         run: |
+          (go generate api/generate.go && go mod tidy)
           (cd cmd/gophermart && go build -buildvcs=false -o gophermart)
           (cd cmd/accrual && chmod +x accrual_linux_amd64)
 
