--- a/.github/workflows/statictest.yml
+++ b/.github/workflows/statictest.yml
@@ -29,6 +29,9 @@ jobs:
           chmod -R +x $GITHUB_WORKSPACE/.tools/statictest
           mv $GITHUB_WORKSPACE/.tools/statictest /usr/local/bin/statictest
 
+      - name: Run generate
+        run: |
+          (go generate api/generate.go && go mod tidy)
       - name: Run statictest
         run: |
           go vet -vettool=$(which statictest) ./...
